# qbasic-rs

./: Cargo.toml  README.md  build.rs  flake.nix  justfile  meson.build
specs/: INFO.md  Minimal Basic (or QBasic).md
specs/original/: Minimal Basic (or QBasic)_1763869571482.md  Minimal Basic (or QBasic)_1764063071801.md
specs/references/: Lab2_Y86-64模拟器_1761194038284.md
src/: ast.rs  lexer.rs  parser.rs
src/core/: ast.rs  display.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/core/eval/: action.rs  event.rs  interpreter.rs  mod.rs  value.rs
src/eval/: action.rs  interpreter.rs  value.rs
src/ffi/: implement.rs  mod.rs
src/ffi/cxx/: interpreter.cxx  interpreter.hxx  utils.hxx
src/ui/: main.cc  main.cxx  main_window.cxx  main_window.hxx
subprojects/: .gitignore
tests/: test_eval_action.rs  test_eval_interpreter.rs  test_eval_value.rs  test_ffi_edit.rs  test_lexer.rs  test_lexer_basic.rs  test_lexer_suite.rs  test_parser.rs  test_statistics.rs  test_syntax_tree.rs  utils.rs
tests/cxx/: test_interpreter.cxx  test_interpreter.hxx  test_runner.cxx
tests/suite/: arithmetic.bas  countdown.bas  edge_cases.bas  error_cases.bas  expressions.bas  relational.bas  simple_verify.bas  strings.bas
