[package]
name = "qbasic-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
bin = []
testing = []

[dependencies]
anyhow = "1.0.100"
cxx = "1.0.190"
getset = "0.1.6"
logos = "0.16.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

[dev-dependencies]
qbasic-rs = { version = "0.1.0", path = ".", features = ["testing"] }

[build-dependencies]
cxx-build = "1.0.190"
